--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles/common.css">
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/homespages.css">
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="styles/media-queries.css">
 
     
