--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/common.css">
-    <link rel="stylesheet" href="styles/nav.css">
-    <link rel="stylesheet" href="styles/homespages.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="homespages.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="styles/media-queries.css">
 
@@ -40,7 +40,7 @@
         </div>
         <div class="center-column">
             <div class="banner-image">
-                <img src="./images/logos/decamp-fantastic-fries-logo-white.png" alt="Logo">
+                <img src="decamp-fantastic-fries-logo-white.png" alt="Logo">
             </div>
             <div class="links-wrapper">
                 <div class="nav-link">
