--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="styles/sqaure-grid.css">
     <link rel="stylesheet" href="styles/helpers.css">
     <link rel="stylesheet" href="styles/media-queries.css">
+    <link rel="stylesheet" href="styles/homespages.css">
+
 
 </head>
 <body>
