--- a/menu.html
+++ b/menu.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="styles/page-container.css">
     <link rel="stylesheet" href="styles/sqaure-grid.css">
     <link rel="stylesheet" href="styles/helpers.css">
+    <link rel="stylesheet" href="styles/contact.css">
+    <link rel="stylesheet" href="styles/buttons.css">
     
 
 </head>
